# openfin

./: README.md  pyproject.toml
src/OpenFin/: cli.py  specs.md
src/OpenFin/main/: __init__.py  llm_client.py
src/OpenFin/main/Agent1/: __init__.py  docs.md  main.md  main.py  specs.md
src/OpenFin/main/Agent1/subAgent1/: __init__.py  data_allocator.md  data_allocator.py  data_loader.md  data_loader.py  docs.md  llm_interface.md  llm_interface.py  main.md  main.py  metrics_calculator.md  metrics_calculator.py  specs.md
src/OpenFin/main/Agent1/subAgent2/: __init__.py  data_access.md  data_access.py  docs.md  llm_interface.md  llm_interface.py  main.md  main.py  specs.md
src/OpenFin/main/Agent1/subAgent3/: __init__.py  data_access.md  data_access.py  docs.md  main.md  main.py  research_analyzer.md  research_analyzer.py  specs.md  tavily_search.md  tavily_search.py
src/OpenFin/main/Agent1/subAgent4/: __init__.py  data_access.md  data_access.py  docs.md  financial_analyzer.md  financial_analyzer.py  main.md  main.py  specs.md
src/OpenFin/main/Agent1/subAgent5/: __init__.py  data_access.md  data_access.py  docs.md  main.md  main.py  pdf_generator.md  pdf_generator.py  pdf_template.json  specs.md
src/OpenFin/main/Agent2/: __init__.py  docs.md  main.md  main.py  specs.md
src/OpenFin/main/Agent2/subAgent1/: __init__.py  data_retriever.md  data_retriever.py  docs.md  main.md  main.py  prompt_analyzer.md  prompt_analyzer.py  specs.md
src/OpenFin/main/Agent2/subAgent2/: __init__.py  docs.md  main.md  main.py  specs.md  (+2 more)
src/OpenFin/main/webapp/: index.html  server.py
(+16 files in other folders)
