[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openfin"
version = "0.1.0"
description = "Financial analytical agent"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.3",
    "fpdf2>=2.7",
    "pypdf>=3.0",
    "tavily-python>=0.3",
]

[project.scripts]
openfin = "OpenFin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
OpenFin = [
    "main/webapp/index.html",
    "main/webapp/static/**/*",
    "main/webapp/config/*.json",
    "main/Agent1/subAgent5/pdf_template.json",
]
